--- a/setup.cfg
+++ b/setup.cfg
@@ -8,9 +8,9 @@ keywords = autism, asd, aid, web, app
 [options]
 packages = find:
 install_requires =
-    streamlit
+    streamlit>=1.24.1
     matplotlib>=3.2.2
-    numpy>=1.18.5
+    numpy>=1.25.1
     opencv-python>=4.1.1
     Pillow>=7.1.2
     PyYAML>=5.3.1
@@ -19,7 +19,7 @@ install_requires =
     torch>=1.7.0
     torchvision>=0.8.1
     tqdm>=4.64.0
-    pandas>=1.1.4
+    pandas>=2.0
     seaborn>=0.11.0
     ipython  # interactive notebook
     psutil  # system utilization
