--- a/setup.cfg
+++ b/setup.cfg
@@ -8,9 +8,9 @@ keywords = autism, asd, aid, web, app
 [options]
 packages = find:
 install_requires =
-    streamlit>=1.24.1
+    streamlit
     matplotlib>=3.2.2
-    numpy>=1.25.1
+    numpy>=1.18.5
     opencv-python>=4.1.1
     Pillow>=7.1.2
     PyYAML>=5.3.1
@@ -19,13 +19,12 @@ install_requires =
     torch>=1.7.0
     torchvision>=0.8.1
     tqdm>=4.64.0
-    pandas>=2.0
+    pandas>=1.1.4
     seaborn>=0.11.0
     ipython  # interactive notebook
     psutil  # system utilization
     thop>=0.1.1  # FLOPs computation
-
-[options.packages.find]
+    [options.packages.find]
 exclude =
     examples*
     tools*
